spade-tests/src/snapshots/spade_tests__ast_lowering__names_do_not_leak_across_match_branches.snap
---
source: spade-tests/src/ast_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Use of undeclared name count
   ┌─ testinput:10:17
   │
10 │         None => count
   │                 ^^^^^ Undeclared name


